testsuite/tests/grammar/invalid_enum/bad-prefix.lkt
grammar foo_grammar {
    @main_rule main_rule <- NoSuchNode.Example("example")
}
